# taskflow-assessment

./: .cursorignore  .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CURSOR_WORKFLOW.md  Makefile  README.md  conftest.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.cursor/plans/: taskflow-architecture.md
.cursor/rules/: 00-project-context.mdc
.cursor/rules/database/: database-optimization.mdc
.cursor/rules/django/: django-admin-best-practices.mdc  django-models-best-practices.mdc
.cursor/rules/drf/: drf-api-design.mdc
.cursor/rules/operations/: logging-best-practices.mdc
.cursor/rules/python/: pythonic-coding-standards.mdc
.cursor/rules/security/: security-best-practices.mdc
.cursor/rules/testing/: testing-best-practices.mdc
.cursor/rules/workflow/: git-workflow.mdc
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/prompts/: gemini-review.md
.github/scripts/: gemini_release_notes.py  gemini_review.py
.github/workflows/: gemini_code_review.yml  lint.yml  migrations.yml  pr_labeler.yml  release_notes.yml  unit_tests.yml
common/: exceptions.py  middleware.py  views.py
common/models/: __init__.py  base.py
common/tests/: test_exception_handler.py  test_health.py  test_middleware.py
docs/: task3-debugging-analysis.md
projects/: admin.py  filters.py  orm_examples.py  serializers.py  urls.py  views.py
projects/management/commands/: seed_data.py
projects/migrations/: 0001_initial.py  0002_project_name_unique.py
projects/models/: __init__.py  project.py  task.py
projects/tests/: factories.py  test_api.py  test_factories.py  test_models.py  test_orm_examples.py  test_regressions.py  test_seed_data.py
taskflow/: settings.py  urls.py
