[project]
name = "taskflow"
version = "0.1.0"
description = "Django + DRF + PostgreSQL project/task management API"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["**/migrations/*", "venv", ".venv"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "DJ",  # flake8-django
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line length handled by the formatter
]

[tool.ruff.lint.isort]
known-first-party = ["common", "projects", "taskflow"]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
ignore_missing_imports = true
warn_unused_ignores = false
check_untyped_defs = true
exclude = ['migrations/', 'venv/', '\.venv/']

[[tool.mypy.overrides]]
module = ["*.migrations.*"]
ignore_errors = true

[tool.django-stubs]
django_settings_module = "taskflow.settings"
