[project]
name = "taskflow"
version = "0.1.0"
description = "Django + DRF + PostgreSQL project/task management API"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["**/migrations/*", "venv", ".venv"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "DJ",  # flake8-django
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "S",   # flake8-bandit (security)
    "N",   # pep8-naming
]
ignore = [
    "E501",  # line length handled by the formatter
    "S101",  # assert: fine in pytest
]

[tool.ruff.lint.per-file-ignores]
"*/tests/*" = ["S101"]
"conftest.py" = ["S101"]
".github/scripts/*.py" = ["S108"]
"*/management/commands/*.py" = ["S311"]

[tool.ruff.lint.isort]
known-first-party = ["common", "projects", "taskflow"]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
check_untyped_defs = true
exclude = ['migrations/', 'venv/', '\.venv/']

[[tool.mypy.overrides]]
module = ["*.migrations.*"]
ignore_errors = true

[tool.django-stubs]
django_settings_module = "taskflow.settings"
